tags/2013-08-29_cppreference/Archive/ecbde3af0716e1869ddd0bf64801d2c1-80c199070668c72f0a5e12e38239d72b/output
+ clang++ -std=c++11 -O3 main.cpp
main.cpp:10:34: error: arithmetic on a pointer to void
    auto bar(A a, B b, decltype(a+b)*) -> decltype(a+b)
                                 ^~
main.cpp:23:21: note: in instantiation of template class 'Eval<int, void *>' requested here
    Eval<int,void*> eiv;
                    ^
1 error generated.
